added some labels to chapt1 sections and made numbers subsection appear in toc

--- a/suomen-mestari-1/kappalet/kappale-1.tex
+++ b/suomen-mestari-1/kappalet/kappale-1.tex
@@ -23,8 +23,11 @@
 \begin{document}
 
 \chapter{Hei ja tervetuloa!}
+\label{kap1}
 \section{Sanasto}
+\label{sanasto-1}
 \subsection{Viikonpäivät}
+\label{viikpai}
 
 \begin{tabularx}{\textwidth}{X X}
 \textbf{Mikä päivä tänään on?} & \textbf{Milloin?} \\
@@ -41,7 +44,8 @@ viikonloppu (la ja su)               & viikonloppu\textbf{na}     \\
 \vspace{2mm}
 toissapäivänä $\rightarrow$ eilen $\rightarrow$ tänään $\rightarrow$ huomenna $\rightarrow$ ylihuomenna
 
-\subsection[]{Numerot}
+\subsection{Numerot}
+\label{num}
 \begin{tabularx}{\textwidth}{XX}
 %\textbf{Numerot} &                    \\
 0       & nolla              \\
