Finished chapter 1, created file for chapter 2 and replaced ä by a in some file/dir names

--- a/suomen-mestari-1/kappalet/kappale-1.tex
+++ b/suomen-mestari-1/kappalet/kappale-1.tex
@@ -94,6 +94,26 @@ toissapäivänä $\rightarrow$ eilen $\rightarrow$ tänään $\rightarrow$ huome
 \end{tabularx}
 
 
-\subsection{Kielliopi}
+\section{Kielliopi}
+
+\subsection{Persoonapronomit ja olla-verbi}
+
+\begin{tabularx}{\textwidth}{XX}
+     & olla   \\
+minä & ole\textbf{n}   \\
+sinä & ole\textbf{t}   \\
+hän  & ole    \\
+me   & ole\textbf{mme} \\
+te   & ole\textbf{tte} \\
+he   & o\textbf{vat}  
+\end{tabularx}
+
+\subsection{Vokaaliharmonia}
+\begin{center}
+\includegraphics{vokaaliharmonia.pdf}
+\end{center}
+\vspace{2mm}
+\textbf{HUOM!}: Yhdyssanat:\\ \\*
+yö\textbar vuorossa $\rightarrow$ last word is what matters.
 
 \end{document}
