--- a/suomen-mestari-1/paatiedosto/paa-sm-1.tex
+++ b/suomen-mestari-1/paatiedosto/paa-sm-1.tex
@@ -9,6 +9,9 @@
 \usepackage{titlesec}
 \usepackage{hyperref}
 \usepackage{glossaries}
+\usepackage{graphicx}
+\graphicspath{{figs/}{../figs/}}
+
 
 \setcounter{secnumdepth}{0}
 
@@ -39,6 +42,8 @@
 \tableofcontents
 
 \subfile{../kappalet/kappale-1}
+
+\subfile{../kappalet/kappale-2}
 
 \glsaddall
 \setglossarystyle{altlistgroup}
